Archive2/9d/439ba3c560a609/output
main.cpp: In function 'int main()':
main.cpp:21:16: error: wrong number of template arguments (2, should be 1)
     rank<int, 2> r;
                ^
main.cpp:7:8: error: provided for 'template<class T> struct rank'
 struct rank
        ^
main.cpp:21:19: error: invalid type in declaration before ';' token
     rank<int, 2> r;
                   ^
main.cpp:21:18: warning: unused variable 'r' [-Wunused-variable]
     rank<int, 2> r;
                  ^
